--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The greatest historic map in York 🇬🇧">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#192b4a" media="(prefers-color-scheme: dark)">
-    <title>Britmap</title>
+    <title>YorkMapped</title>
 
     <!-- Optional: Remove if not necessary -->
     <link rel="icon" href="videos/favicon.png" type="image/png" sizes="32x32">
