--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>YorkMapped</title>
 
     <!-- Optional: Remove if not necessary -->
-    <link rel="icon" href="videos/favicon.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="https://freddyor.github.io/british-map/videos/favicon.png" type="image/png" sizes="32x32">
 
     <!-- MapLibre GL JS CSS -->
     <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
