--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="videos/favicon.png" alt="Loading icon" id="loading-icon">
+        <img src="https://freddyor.github.io/british-map/videos/favicon.png" alt="Loading icon" id="loading-icon">
         <div class="spinner"></div>
     </div>
     <div id="map"></div>
