--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Optional: Remove if not necessary -->
     <link rel="icon" href="https://freddyor.github.io/british-map/videos/favicon.png" type="image/png" sizes="32x32">
 
-    <!-- MapLibre GL JS CSS -->
-    <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
+    <!-- Mapbox GL JS CSS (replace MapLibre) -->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
 
     <style>
         body, html {
@@ -73,8 +73,8 @@
     </div>
     <div id="map"></div>
 
-    <!-- MapLibre GL JS -->
-    <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
+    <!-- Mapbox GL JS (replace MapLibre) -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
     <!-- Your custom script -->
     <script type="module" src="index.js"></script>
 </body>
