Hide auth container by default

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="spinner"></div>
     </div>
     <!-- Firebase Auth UI -->
-    <div class="auth-container" id="auth-ui">
+    <div class="auth-container" id="auth-ui" style="display:none;">
         <h2>Login to YorkMapped</h2>
         <form id="signup-form" class="auth-form">
             <input type="email" id="signup-email" placeholder="Email" required />
