--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <meta name="theme-color" content="#192b4a" media="(prefers-color-scheme: dark)">
     <title>YorkMapped</title>
 
-    <!-- Optional: Remove if not necessary -->
     <link rel="icon" href="https://freddyor.github.io/british-map/videos/favicon.png" type="image/png" sizes="32x32">
-
-    <!-- Mapbox GL JS CSS (replace MapLibre) -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- Firebase JS SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js"></script>
 
     <style>
         body, html {
@@ -24,46 +27,20 @@
             display: flex;
             flex-direction: column;
         }
-
-        #map {
-            flex: 1;
-            width: 100%;
-            margin: 0; /* Ensure no margin */
-            padding: 0; /* Ensure no padding */
-        }
+        #map { flex: 1; width: 100%; }
         #loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-color: #192b4a;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
+            display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999;
         }
-
-        #loading-icon {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 20px;
-        }
-
+        #loading-icon { width: 50px; height: 50px; margin-bottom: 20px; }
         .spinner {
-            width: 40px;
-            height: 40px;
-            border: 4px solid #ccc;
-            border-top: 4px solid #333;
+            width: 40px; height: 40px;
+            border: 4px solid #ccc; border-top: 4px solid #333;
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     </style>
 </head>
 <body>
@@ -72,10 +49,7 @@
         <div class="spinner"></div>
     </div>
     <div id="map"></div>
-
-    <!-- Mapbox GL JS (replace MapLibre) -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
-    <!-- Your custom script -->
     <script type="module" src="index.js"></script>
 </body>
 </html>
