--- a/index.html
+++ b/index.html
@@ -36,32 +36,103 @@
             animation: spin 1s linear infinite;
         }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+        /* MODAL LOGIN STYLES */
+        #auth-modal-bg {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100vw; height: 100vh;
+            background: rgba(0,0,0,0.4);
+            z-index: 9999999;
+            display: none;
+            align-items: center;
+            justify-content: center;
+        }
+        .auth-container {
+            background: #fff;
+            border-radius: 14px;
+            padding: 24px 18px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.18);
+            min-width: 280px;
+            max-width: 95vw;
+            position: relative;
+        }
+        .auth-container h2 { margin-top: 0; font-size: 1.2em; }
+        .auth-form input {
+            width: 100%; padding: 8px; margin: 6px 0;
+            border-radius: 8px; border: 1px solid #ccc;
+            font-size: 15px;
+        }
+        .auth-form button {
+            background: #9b4dca; color: #fff; border: none;
+            padding: 8px 16px; border-radius: 8px;
+            margin: 8px 0; font-size: 16px; cursor: pointer;
+        }
+        #logout-btn { background: #e0e0e0; color: #333; }
+        #user-info { margin: 10px 0 0 0; font-weight: bold; font-size: 16px; color: #7C6E4D; }
+        .hide { display: none; }
+        .show { display: block; }
+        #auth-error { color:#c00; margin-top:8px; min-height:18px;}
+        #close-auth-modal {
+            position: absolute;
+            top: 8px; right: 12px;
+            background: transparent;
+            border: none;
+            font-size: 22px;
+            color: #9b4dca;
+            cursor: pointer;
+            z-index: 10;
+        }
+        @media (max-width: 540px) {
+            .auth-container { max-width: 98vw; padding: 10px 2vw; }
+        }
     </style>
 </head>
 <body>
-    <div class="auth-container" id="auth-ui" style="display:none;">
-    <h2>Login to YorkMapped</h2>
-    <form id="signup-form" class="auth-form">
-        <input type="email" id="signup-email" placeholder="Email" required />
-        <input type="password" id="signup-password" placeholder="Password" required />
-        <button type="submit">Sign Up</button>
-    </form>
-    <form id="login-form" class="auth-form">
-        <input type="email" id="login-email" placeholder="Email" required />
-        <input type="password" id="login-password" placeholder="Password" required />
-        <button type="submit">Log In</button>
-    </form>
-    <div id="user-info">Not logged in</div>
-    <button id="logout-btn" class="hide">Log Out</button>
-    <div id="auth-error"></div>
-</div>
+    <!-- MODAL LOGIN -->
+    <div id="auth-modal-bg">
+      <div class="auth-container" id="auth-ui">
+        <button id="close-auth-modal" aria-label="Close login modal">&times;</button>
+        <h2>Login to YorkMapped</h2>
+        <form id="signup-form" class="auth-form">
+            <input type="email" id="signup-email" placeholder="Email" required />
+            <input type="password" id="signup-password" placeholder="Password" required />
+            <button type="submit">Sign Up</button>
+        </form>
+        <form id="login-form" class="auth-form">
+            <input type="email" id="login-email" placeholder="Email" required />
+            <input type="password" id="login-password" placeholder="Password" required />
+            <button type="submit">Log In</button>
+        </form>
+        <div id="user-info">Not logged in</div>
+        <button id="logout-btn" class="hide">Log Out</button>
+        <div id="auth-error"></div>
+      </div>
+    </div>
     <div id="loading-screen">
         <img src="https://freddyor.github.io/british-map/videos/favicon.png" alt="Loading icon" id="loading-icon">
         <div class="spinner"></div>
     </div>
     <div id="map"></div>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
-    <!-- Your main app code as ES module -->
     <script type="module" src="index.js"></script>
+    <script>
+        // Modal show/hide logic
+        document.getElementById('close-auth-modal').onclick = function() {
+            document.getElementById('auth-modal-bg').style.display = 'none';
+        };
+        window.showLoginModal = function() {
+            document.getElementById('auth-modal-bg').style.display = 'flex';
+        };
+        window.hideLoginModal = function() {
+            document.getElementById('auth-modal-bg').style.display = 'none';
+        };
+        // Optionally, close modal on background click (not on modal itself)
+        document.getElementById('auth-modal-bg').onclick = function(e) {
+            if (e.target === this) {
+                this.style.display = 'none';
+            }
+        };
+    </script>
 </body>
 </html>
