--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta name="theme-color" content="#192b4a" media="(prefers-color-scheme: dark)">
     <title>YorkMapped</title>
 
+    <!-- Optional: Remove if not necessary -->
     <link rel="icon" href="https://freddyor.github.io/british-map/videos/favicon.png" type="image/png" sizes="32x32">
+
+    <!-- Mapbox GL JS CSS (replace MapLibre) -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <style>
         body, html {
@@ -22,117 +24,59 @@
             display: flex;
             flex-direction: column;
         }
-        #map { flex: 1; width: 100%; }
-        #loading-screen {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background-color: #192b4a;
-            display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999;
+
+        #map {
+            flex: 1;
+            width: 100%;
+            margin: 0; /* Ensure no margin */
+            padding: 0; /* Ensure no padding */
         }
-        #loading-icon { width: 50px; height: 50px; margin-bottom: 20px; }
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #192b4a;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        #loading-icon {
+            width: 50px;
+            height: 50px;
+            margin-bottom: 20px;
+        }
+
         .spinner {
-            width: 40px; height: 40px;
-            border: 4px solid #ccc; border-top: 4px solid #333;
+            width: 40px;
+            height: 40px;
+            border: 4px solid #ccc;
+            border-top: 4px solid #333;
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
-        /* MODAL LOGIN STYLES */
-        #auth-modal-bg {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100vw; height: 100vh;
-            background: rgba(0,0,0,0.4);
-            z-index: 9999999;
-            display: none;
-            align-items: center;
-            justify-content: center;
-        }
-        .auth-container {
-            background: #fff;
-            border-radius: 14px;
-            padding: 24px 18px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.18);
-            min-width: 280px;
-            max-width: 95vw;
-            position: relative;
-        }
-        .auth-container h2 { margin-top: 0; font-size: 1.2em; }
-        .auth-form input {
-            width: 100%; padding: 8px; margin: 6px 0;
-            border-radius: 8px; border: 1px solid #ccc;
-            font-size: 15px;
-        }
-        .auth-form button {
-            background: #9b4dca; color: #fff; border: none;
-            padding: 8px 16px; border-radius: 8px;
-            margin: 8px 0; font-size: 16px; cursor: pointer;
-        }
-        #logout-btn { background: #e0e0e0; color: #333; }
-        #user-info { margin: 10px 0 0 0; font-weight: bold; font-size: 16px; color: #7C6E4D; }
-        .hide { display: none; }
-        .show { display: block; }
-        #auth-error { color:#c00; margin-top:8px; min-height:18px;}
-        #close-auth-modal {
-            position: absolute;
-            top: 8px; right: 12px;
-            background: transparent;
-            border: none;
-            font-size: 22px;
-            color: #9b4dca;
-            cursor: pointer;
-            z-index: 10;
-        }
-        @media (max-width: 540px) {
-            .auth-container { max-width: 98vw; padding: 10px 2vw; }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <!-- MODAL LOGIN -->
-    <div id="auth-modal-bg">
-      <div class="auth-container" id="auth-ui">
-        <button id="close-auth-modal" aria-label="Close login modal">&times;</button>
-        <h2>Login to YorkMapped</h2>
-        <form id="signup-form" class="auth-form">
-            <input type="email" id="signup-email" placeholder="Email" required />
-            <input type="password" id="signup-password" placeholder="Password" required />
-            <button type="submit">Sign Up</button>
-        </form>
-        <form id="login-form" class="auth-form">
-            <input type="email" id="login-email" placeholder="Email" required />
-            <input type="password" id="login-password" placeholder="Password" required />
-            <button type="submit">Log In</button>
-        </form>
-        <div id="user-info">Not logged in</div>
-        <button id="logout-btn" class="hide">Log Out</button>
-        <div id="auth-error"></div>
-      </div>
-    </div>
     <div id="loading-screen">
         <img src="https://freddyor.github.io/british-map/videos/favicon.png" alt="Loading icon" id="loading-icon">
         <div class="spinner"></div>
     </div>
     <div id="map"></div>
+
+    <!-- Mapbox GL JS (replace MapLibre) -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
+    <!-- Your custom script -->
     <script type="module" src="index.js"></script>
-    <script>
-        // Modal show/hide logic
-        document.getElementById('close-auth-modal').onclick = function() {
-            document.getElementById('auth-modal-bg').style.display = 'none';
-        };
-        window.showLoginModal = function() {
-            document.getElementById('auth-modal-bg').style.display = 'flex';
-        };
-        window.hideLoginModal = function() {
-            document.getElementById('auth-modal-bg').style.display = 'none';
-        };
-        // Optionally, close modal on background click (not on modal itself)
-        document.getElementById('auth-modal-bg').onclick = function(e) {
-            if (e.target === this) {
-                this.style.display = 'none';
-            }
-        };
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
