--- a/index.html
+++ b/index.html
@@ -18,25 +18,49 @@
         body, html {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            height: 100vh;
             font-family: 'Poppins', sans-serif;
             display: flex;
             flex-direction: column;
+            background: #E9E8E0;
         }
 
-        #map {
+        #main-content {
             flex: 1;
-            width: 100%;
-            margin: 0; /* Ensure no margin */
-            padding: 0; /* Ensure no padding */
+            width: 100vw;
+            height: 100%;
+            position: relative;
+            display: flex;
         }
+
+        #map-section, #archive-section, #about-section {
+            width: 100vw;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: none;
+            background: #E9E8E0;
+        }
+        #map-section {
+            display: block;
+        }
+        #map {
+            width: 100vw;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
         #loading-screen {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            height: 100vh;
             background-color: #192b4a;
             display: flex;
             flex-direction: column;
@@ -64,6 +88,42 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+        #bottom-bar {
+            position: fixed;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100vw;
+            height: 64px;
+            background: #fff;
+            border-top: 2px solid #f0f0f0;
+            box-shadow: 0 -6px 15px rgba(0, 0, 0, 0.08);
+            z-index: 10001;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            font-family: 'Poppins', sans-serif;
+        }
+        .bar-btn {
+            flex: 1 1 0;
+            border: none;
+            background: none;
+            color: #9b4dca;
+            font-size: 18px;
+            font-weight: 600;
+            cursor: pointer;
+            padding: 8px 0;
+            transition: background 0.15s, color 0.15s;
+            outline: none;
+            border-radius: 0;
+        }
+        .bar-btn.active {
+            color: #fff;
+            background: #9b4dca;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+        }
     </style>
 </head>
 <body>
@@ -71,7 +131,24 @@
         <img src="https://freddyor.github.io/british-map/videos/favicon.png" alt="Loading icon" id="loading-icon">
         <div class="spinner"></div>
     </div>
-    <div id="map"></div>
+    <div id="main-content">
+        <div id="map-section">
+            <div id="map"></div>
+        </div>
+        <div id="archive-section" style="display:none;">
+            <!-- Archive content to come -->
+        </div>
+        <div id="about-section" style="display:none;">
+            <!-- About content to come -->
+        </div>
+    </div>
+
+    <!-- Bottom navigation bar -->
+    <div id="bottom-bar">
+        <button id="bar-map" class="bar-btn active">Map</button>
+        <button id="bar-archive" class="bar-btn">Archive</button>
+        <button id="bar-about" class="bar-btn">About</button>
+    </div>
 
     <!-- Mapbox GL JS (replace MapLibre) -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
