--- a/index.html
+++ b/index.html
@@ -124,6 +124,41 @@
             border-radius: 12px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.06);
         }
+        /* Optional: About section styling */
+        #about-section-content {
+            max-width: 400px;
+            margin: 40px auto 0 auto;
+            padding: 24px 16px 32px 16px;
+            background: #fff;
+            border-radius: 14px;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+            font-family: 'Poppins', sans-serif;
+            font-size: 15px;
+            line-height: 1.5;
+        }
+        #about-section-content img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+        #about-section-content .project-info {
+            margin-bottom: 15px;
+        }
+        #about-section-content .donor-subtext {
+            font-size: 12px;
+            color: #666;
+            margin-top: 1px;
+        }
+        #about-section-content .donor {
+            margin-bottom: 12px;
+        }
+        #about-section-content .donor-amount {
+            color: #9b4dca;
+            margin-left: 10px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -139,7 +174,53 @@
             <!-- Archive content to come -->
         </div>
         <div id="about-section" style="display:none;">
-            <!-- About content to come -->
+            <div id="about-section-content">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <img src="https://freddyor.github.io/british-map/videos/IMG_7251.jpeg" 
+                        alt="Profile Photo" />
+                </div>
+                <div class="project-info">
+                    <b>If this site was free for you to use, it means someone else paid forward.</b>
+                </div>
+                <div class="project-info">
+                    My name is Freddy, I’m a 22 year old local to the city. I am coding and building this project completely independently. My mission is to use technology to tell the story of York, like no one else has before.
+                </div>
+                <div class="project-info">
+                    I would love to keep the site free-to-use, so please consider donating forward for your usage. I would also love to keep making the site better for future users (i.e. buying historic images, maps, and expanding features).
+                </div>
+                <div style="display: flex; align-items: center; justify-content: center; margin-top: 15px; font-size: 16px; font-weight: bold;">
+                    <hr style="flex: 1; border: 1px solid #ccc; margin: 0 10px;">
+                    Our Donors ❤️
+                    <hr style="flex: 1; border: 1px solid #ccc; margin: 0 10px;">
+                </div>
+                <div id="donor-list" style="margin-top: 10px;">
+                    <div class="donor">
+                        <span class="donor-name" style="font-weight: bold;">Anonymous</span>
+                        <span class="donor-amount">£15</span>
+                        <div class="donor-subtext"></div>
+                    </div>
+                    <div class="donor">
+                        <span class="donor-name" style="font-weight: bold;">Matt Hall</span>
+                        <span class="donor-amount">£5</span>
+                        <div class="donor-subtext">Fantastic stuff! Looking forward to finding out more about this fascinating city.</div>
+                    </div>
+                    <div class="donor">
+                        <span class="donor-name" style="font-weight: bold;">Chip Pedro</span>
+                        <span class="donor-amount">£5</span>
+                        <div class="donor-subtext">Will be very useful on our upcoming trip - really nice work!</div>
+                    </div>
+                    <div class="donor">
+                        <span class="donor-name" style="font-weight: bold;">buffsteve24</span>
+                        <span class="donor-amount">£5</span>
+                        <div class="donor-subtext">Amazing work!</div>
+                    </div>
+                    <div class="donor">
+                        <span class="donor-name" style="font-weight: bold;">marksaw20</span>
+                        <span class="donor-amount">£5</span>
+                        <div class="donor-subtext">Lovely map. Really interesting.</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
