--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             border-top: 2px solid #f0f0f0;
             box-shadow: 0 -6px 15px rgba(0, 0, 0, 0.08);
             z-index: 10001;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            font-family: 'Poppins', sans-serif;
+    display: none; /* CHANGED from flex to none */
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
         }
         .bar-btn {
             flex: 1 1 0;
