--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             display: flex;
             flex-direction: column;
             background: #E9E8E0;
+            overflow: hidden;
         }
 
         #main-content {
-            flex: 1;
             width: 100vw;
-            height: 100%;
+                height: calc(100vh - 64px);
             position: relative;
             display: flex;
         }
