--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         #main-content {
             width: 100vw;
-            height: calc(100vh - 64px);
+            height: calc(100vh - 44.8px); /* 64px - 30% = 44.8px */
             position: relative;
             display: flex;
         }
@@ -93,34 +93,42 @@
             right: 0;
             bottom: 0;
             width: 100vw;
-            height: 64px;
+            height: 44.8px; /* Reduced by 30% from 64px */
             background: #fff;
             border-top: 2px solid #f0f0f0;
             box-shadow: 0 -6px 15px rgba(0, 0, 0, 0.08);
             z-index: 10001;
             display: none; /* hidden until loading screen is gone */
-            justify-content: space-around;
-            align-items: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
             font-family: 'Poppins', sans-serif;
+            user-select: none;
         }
-        .bar-btn {
+        .bar-tab {
             flex: 1 1 0;
-            border: none;
-            background: none;
-            color: #9b4dca;
-            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 17px;
             font-weight: 600;
             cursor: pointer;
-            padding: 8px 0;
-            transition: background 0.15s, color 0.15s;
+            transition: color 0.15s;
+            color: #888;
+            background: none;
+            border: none;
             outline: none;
-            border-radius: 0;
+            height: 100%;
         }
-        .bar-btn.active {
-            color: #fff;
-            background: #9b4dca;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+        .bar-tab.active {
+            color: #111;
+            background: none;
+        }
+        .bar-separator {
+            width: 1px;
+            background: #e0e0e0;
+            margin: 8px 0;
+            align-self: stretch;
         }
         #about-section-content {
             max-width: 400px;
@@ -244,13 +252,41 @@
 
     <!-- Bottom navigation bar -->
     <div id="bottom-bar">
-        <button id="bar-map" class="bar-btn active">Map</button>
-        <button id="bar-archive" class="bar-btn">Archive</button>
-        <button id="bar-about" class="bar-btn">About</button>
+        <div id="bar-map" class="bar-tab active">Map</div>
+        <div class="bar-separator"></div>
+        <div id="bar-archive" class="bar-tab">Archive</div>
+        <div class="bar-separator"></div>
+        <div id="bar-about" class="bar-tab">About</div>
     </div>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.0/mapbox-gl.js"></script>
     <script type="module" src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script>
+    // --- Update bottom bar tab logic for new structure ---
+    document.addEventListener('DOMContentLoaded', () => {
+        function showSection(section) {
+            const sections = ['map-section', 'archive-section', 'about-section'];
+            sections.forEach(id => {
+                const el = document.getElementById(id);
+                if (el) {
+                    el.style.display = (id === section) ? 'block' : 'none';
+                }
+            });
+            document.getElementById('bar-map').classList.toggle('active', section === 'map-section');
+            document.getElementById('bar-archive').classList.toggle('active', section === 'archive-section');
+            document.getElementById('bar-about').classList.toggle('active', section === 'about-section');
+            // Resize Mapbox map if returning to map section
+            if (section === 'map-section' && window.map) {
+                window.map.resize();
+            }
+        }
+        document.getElementById('bar-map').addEventListener('click', () => showSection('map-section'));
+        document.getElementById('bar-archive').addEventListener('click', () => showSection('archive-section'));
+        document.getElementById('bar-about').addEventListener('click', () => showSection('about-section'));
+        // Initially show map section
+        showSection('map-section');
+    });
+    </script>
 </body>
 </html>
