--- a/index.html
+++ b/index.html
@@ -171,14 +171,17 @@
             position: absolute !important;
             z-index: 10 !important;
         }
-        .mapboxgl-ctrl-logo {
-            left: 10px !important;
-            top: 10px !important;
-            right: auto !important;
-            bottom: auto !important;
-            position: absolute !important;
-            z-index: 10 !important;
-        }
+.mapboxgl-ctrl-logo {
+    left: 10px !important;
+    top: 10px !important;
+    right: auto !important;
+    bottom: auto !important;
+    /* Remove position: absolute !important; */
+    z-index: 10 !important;
+    display: block !important;
+    opacity: 1 !important;
+    pointer-events: auto !important;
+}
         /* Enable vertical scrolling for archive and about sections ONLY */
         #archive-section, #about-section {
             overflow-y: auto;
