--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             max-width: 400px;
             margin: 40px auto 0 auto;
             padding: 24px 16px 32px 16px;
-            background: #fff;
-            border-radius: 14px;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+    background: none; /* Remove the white background */
+    border-radius: 0; /* Remove rounded corners */
+    box-shadow: none;
             font-family: 'Poppins', sans-serif;
             font-size: 15px;
             line-height: 1.5;
@@ -219,13 +219,19 @@
                         alt="Profile Photo" />
                 </div>
                 <div class="project-info">
-                    <b>If this site was free for you to use, it means someone else paid forward.</b>
+                    <b>We all have powerful new technology in our hands.</b>
                 </div>
                 <div class="project-info">
-                    My name is Freddy, I’m a 22 year old local to the city. I am coding and building this project completely independently. My mission is to use technology to tell the story of York, like no one else has before.
+                    Instead of inspiring negativity, division and hatred, it is time we use technology to inspire interest and enthusiasm in Britain and its heritage - for the next generations to come.
                 </div>
                 <div class="project-info">
-                    I would love to keep the site free-to-use, so please consider donating forward for your usage. I would also love to keep making the site better for future users (i.e. buying historic images, maps, and expanding features).
+                    My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
+                </div>
+                                <div class="project-info">
+                    This site is solely my project, built and coded by me. It is starting in York, where I am based, but I aim to cover the entire of Britain at some point. It will be a monumental task.
+                </div>
+                                                <div class="project-info">
+                    Email me: freddy@britmap.com
                 </div>
                 <div style="display: flex; align-items: center; justify-content: center; margin-top: 15px; font-size: 16px; font-weight: bold;">
                     <hr style="flex: 1; border: 1px solid #ccc; margin: 0 10px;">
