Update text and add emoji in index.html

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             font-family: 'Poppins', sans-serif;
             font-size: 15px;
             line-height: 1.5;
+            text-align: center;
         }
         #about-section-content img {
             width: 80px;
@@ -219,10 +220,10 @@
                         alt="Profile Photo" />
                 </div>
                 <div class="project-info">
-                    <b>We all have powerful new technology in our hands.</b>
+                    <b>My mission is to inspire interest and enthusiasm in British heritage for generations to come.</b>
                 </div>
                 <div class="project-info">
-                    Instead of inspiring negativity, division and hatred, it is time we use technology to inspire interest and enthusiasm in Britain and its heritage - for the next generations to come.
+                    We all have powerful new technology in our hands. Instead of inspiring negativity, division and hatred, it is time we use this technology to inspire positivity in Britain and its heritage - for the next generations to come.
                 </div>
                 <div class="project-info">
                     My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
@@ -231,7 +232,7 @@
                     This site is solely my project, built and coded by me. It is starting in York, where I am based, but I aim to cover the entire of Britain at some point. It will be a monumental task.
                 </div>
                                                 <div class="project-info">
-                    Email me: freddy@britmap.com
+                    Email me: freddy@britmap.com 📧
                 </div>
             </div>
         </div>
