Update project description in index.html

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     My name is Freddy. I am not a historian or a scholar, but I know how to engage a modern, younger audience like few historians are capable of.
                 </div>
                                 <div class="project-info">
-                    This site is solely my project, built and coded by me. It is starting in York, where I am based, but I aim to cover the entire of Britain at some point. It will be a monumental task.
+                    This site is solely my project, built and coded by me. It is starting in York, where I am based.
                 </div>
                                                 <div class="project-info">
                     Email me: freddy@britmap.com 📧
