--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
                                 <div class="project-info">
                     This site is solely my project, built and coded by me. It is starting in York, where I am based.
                 </div>
+                <div class="project-info">
+    The site aims to solve two of your problems:
+    <ul style="list-style-type: disc; text-align: left; padding-left: 1.5em;">
+        <li>allow you to to see the hidden and unknown</li>
+        <li>allow you to discover the story behind any building, monument, curiosity, that you are looking at</li>
+    </ul>
+</div>
                                                 <div class="project-info">
                     Email me: freddy@britmap.com 📧
                 </div>
