--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                 <div class="project-info">
     The site aims to solve two of your problems:
     <ul style="list-style-type: disc; text-align: left; padding-left: 1.5em;">
-        <li>allow you to to see the hidden and unknown</li>
-        <li>allow you to discover the story behind any building, monument, curiosity, that you are looking at</li>
+        <li>allow you to to see the hidden and unknown (green markers)</li>
+        <li>allow you to discover the story behind any building that you are looking at (white markers)</li>
     </ul>
 </div>
                                                 <div class="project-info">
