--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="project-info">
     The site aims to solve two of your problems:
     <ul class="custom-bullets" style="list-style-type: disc; text-align: left;">
-        <li>allow you to to see the hidden and unknown (<span class="green-text">yellow</span> markers)</li>
+        <li>allow you to to see the hidden and unknown (<span style="color: #ffd600; font-weight: bold;">yellow</span> markers)</li>
         <li>allow you to discover the story behind any building that you are looking at (white markers)</li>
     </ul>
 </div>
